apps/monitoring/gotify-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gotify
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gotify
    spec:
      containers:
      - name: gotify
        image: gotify/server
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 50m
            memory: 40Mi
          requests:
            cpu: 10m
            memory: 20Mi
        volumeMounts:
        - name: gotify-data
          mountPath: /app/data/
        securityContext:
          runAsNonRoot: true
          runAsUser: 2000
          runAsGroup: 2000
      serviceAccountName: gotify
      volumes:
      - name: gotify-data
        persistentVolumeClaim:
          claimName: gotify-data
