apps/monitoring/gotify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: gotify
  type: ClusterIP
