apps/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: self-signed
    cert-manager.io/common-name: prometheus.k8s
    kubernetes.io/ingress.class: haproxy
  name: prometheus
  namespace: monitoring
spec:
  tls:
  - secretName: prometheus-tls
    hosts:
    - prometheus.k8s
  rules:
  - host: prometheus.k8s
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
        path: /
        pathType: Prefix
