apps/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: self-signed
    cert-manager.io/common-name: alertmanager.k8s
    kubernetes.io/ingress.class: haproxy-private
  name: alertmanager
  namespace: monitoring
spec:
  tls:
  - secretName: alertmanager-tls
    hosts:
    - alertmanager.k8s
  rules:
  - host: alertmanager.k8s
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager-allow-from-ingress
  namespace: monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: haproxy-ingress
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: haproxy-ingress-private
    ports:
    - port: 9093
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: alert-router
      app.kubernetes.io/instance: main
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Ingress
